@@ -1,6 +1,6 @@
 // ****************************************************************************
 // 
-// Copyright (C) 2005-2011  Doom9 & al
+// Copyright (C) 2005-2012  Doom9 & al
 // 
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -611,7 +611,7 @@ namespace MeGUI.core.gui
                 currentProcessor.StatusUpdate += new JobProcessingStatusUpdateCallback(UpdateGUIStatus);
 
                 // Progress window
-                pw.setPriority(mainForm.Settings.DefaultPriority);
+                pw.setPriority(mainForm.Settings.ProcessingPriority);
                 if (mainForm.Settings.OpenProgressWindow && mainForm.Visible)
                     this.ShowProcessWindow();
 
